<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>g1_hardware_interface</name>
  <version>0.0.0</version>
  <description>G1 hardware interface</description>
  <maintainer email="ma207185099@gmail.com">Haolin Ma</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>unitree_go</depend>
  <depend>unitree_hg</depend>
  <depend>unitree_api</depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>rosbag2_cpp</depend>
  <depend>ocs2_ros2_msgs</depend>
  <depend>ocs2_core</depend>
  <depend>humanoid_common_mpc</depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_cmake_clang_format</test_depend>
  <test_depend>ament_cmake_clang_tidy</test_depend>
  <test_depend>ament_cmake_cppcheck</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
